--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -7,7 +7,7 @@ ENV NODE_VERSION=21.5.0
 # Install a basic environment needed for our build tools
 RUN apt -yq update && \
     apt -yqq install --no-install-recommends curl ca-certificates \
-    build-essential pkg-config libssl-dev libunwind-dev llvm-dev liblmdb-dev clang cmake rsync git
+    build-essential pkg-config libssl-dev llvm-dev libunwind-dev liblmdb-dev clang cmake rsync git
 
 # Install Node.js using nvm
 ENV PATH="/root/.nvm/versions/node/v${NODE_VERSION}/bin:${PATH}"
@@ -19,5 +19,8 @@ RUN . "${NVM_DIR}/nvm.sh" && nvm alias default v${NODE_VERSION}
 # Install dfx
 RUN sh -ci "$(curl -fsSL https://internetcomputer.org/install.sh)"
 
-COPY . /canister
-WORKDIR /canister
+COPY .devcontainer/docker-entrypoint.sh /
+RUN chmod +x /docker-entrypoint.sh
+CMD [ "/docker-entrypoint.sh" ]
+
+EXPOSE 4943
