--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -18,15 +18,17 @@
         // },
         "4943": {
             "label": "dfx",
-            "onAutoForward": "notify"
+            "onAutoForward": "silent"
         },
         "8080": {
             "label": "node",
-            "onAutoForward": "notify"
+            "onAutoForward": "openBrowser"
         }
     },
     // Uncomment the next line to run commands after the container is created.
     // "postStartCommand": "nohup bash -c 'dfx start &' && cat nohup.out && rm nohup.out",
+    "postCreateCommand": "npm install",
+    "postAttachCommand": "dfx deploy && npm start",
     "overrideCommand": false,
     // Configure tool-specific properties.
     "customizations": {
