--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -11,6 +11,10 @@
     // Features to add to the dev container. More info: https://containers.dev/features.
     // "features": {},
     // Use 'forwardPorts' to make a list of ports inside the container available locally.
+    "forwardPorts": [
+        4943,
+        8080
+    ],
     "portsAttributes": {
         // "3000": {
         //     "label": "canisters",
