--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -26,7 +26,8 @@
         },
         "8080": {
             "label": "node",
-            "onAutoForward": "openBrowser"
+            "onAutoForward": "openBrowser",
+            "protocol": "http"
         }
     },
     // Uncomment the next line to run commands after the container is created.
