--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -3,6 +3,8 @@
 tasks:
   - before: |
       npm install &
+      export PATH="$HOME/bin:$PATH"
+      echo 'export PATH="$HOME/bin:$PATH"' >> ~/.bashrc
       sudo apt-get install -q -y libunwind-dev
       sh -ci "$(curl -fsSL https://internetcomputer.org/install.sh)"
       dfx start --background --clean
