--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "scripts": {
     "build": "webpack",
     "prebuild": "npm run generate",
-    "start": "webpack serve --mode development --env development",
+    "start": "webpack serve --mode development --env development --port 3000",
     "deploy:local": "dfx deploy --network=local",
     "deploy:ic": "dfx deploy --network=ic",
     "generate": "dfx generate icp_hello_world_backend"
