--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "generate": "dfx generate icp_hello_world_backend"
   },
   "dependencies": {
-    "@dfinity/agent": "^0.19.0",
+    "@dfinity/agent": "0.19.0",
     "@dfinity/candid": "^0.19.3",
     "@dfinity/principal": "^0.19.3"
   },
