--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,18 +1,11 @@
-// For format details, see https://aka.ms/devcontainer.json. For config options, see the
-// README at: https://github.com/devcontainers/templates/tree/main/src/docker-existing-dockerfile
 {
-    "name": "ICP Hello World",
-    "build": {
-        // Sets the run context to one level up instead of the .devcontainer folder.
-        "context": "..",
-        // Update the 'dockerFile' property if you aren't using the standard 'Dockerfile' filename.
-        "dockerfile": "Dockerfile"
-    },
-    // Features to add to the dev container. More info: https://containers.dev/features.
+    "name": "ICP Hello World Motoko",
+    "image": "ghcr.io/fxgst/icp-dev-env:release",
+    "forwardPorts": [4943, 8080],
     "portsAttributes": {
         "4943": {
             "label": "dfx",
-            "onAutoForward": "silent"
+            "onAutoForward": "ignore"
         },
         "8080": {
             "label": "dev server",
@@ -24,7 +17,9 @@
     "customizations": {
         "vscode": {
             "extensions": [
-                "dfinity-foundation.vscode-motoko"
+                "dfinity-foundation.vscode-motoko",
+                "tamasfe.even-better-toml",
+                "rust-lang.rust-analyzer"
             ]
         }
     }
