--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -4,6 +4,10 @@ tasks:
         echo 'export PATH="$HOME/bin:$PATH"' >> ~/.bashrc
         sudo apt-get install -q -y libunwind-dev
         sh -ci "$(curl -fsSL https://internetcomputer.org/install.sh)"
+        curl -sLO https://download.dfinity.systems/ic/69e1408347723dbaa7a6cd2faa9b65c42abbe861/openssl-static-binaries/x86_64-linux/pocket-ic.gz
+        gzip -d pocket-ic.gz
+        chmod +x pocket-ic
+        pip3 install pocket-ic
         npm install &
         dfx start --background --clean
         open README.md
