--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
     "generate": "dfx generate icp_hello_world_motoko_backend"
   },
   "dependencies": {
-    "@dfinity/agent": "0.19.0",
-    "@dfinity/candid": "^0.19.3",
-    "@dfinity/principal": "^0.19.3"
+    "@dfinity/agent": "^0.21.4",
+    "@dfinity/candid": "^0.21.4",
+    "@dfinity/principal": "^0.21.4"
   },
   "devDependencies": {
     "assert": "2.0.0",
