--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,13 +1,13 @@
 tasks:
   - before: |      
       export PATH="$HOME/bin:$PATH"
-      export DFX_VERSION=0.16.1
-      export POCKET_IC_PYTHON_VERSION=2.0.2
-      export POCKET_IC_SERVER_HASH=69e1408347723dbaa7a6cd2faa9b65c42abbe861
+      export DFX_VERSION=0.17.0
+      export POCKET_IC_PYTHON_VERSION=2.1.0
+      export POCKET_IC_SERVER_VERSION=3.0.1
       echo 'export PATH="$HOME/bin:$PATH"' >> ~/.bashrc
       sudo apt-get install -q -y libunwind-dev
       sh -ci "$(curl -fsSL https://internetcomputer.org/install.sh)"
-      curl -sLO https://download.dfinity.systems/ic/${POCKET_IC_SERVER_HASH}/openssl-static-binaries/x86_64-linux/pocket-ic.gz
+      curl -Ls https://github.com/dfinity/pocketic/releases/download/${POCKET_IC_SERVER_VERSION}/pocket-ic-x86_64-linux.gz -o pocket-ic.gz
       gzip -d pocket-ic.gz
       chmod +x pocket-ic
       pip3 install pocket-ic==${POCKET_IC_PYTHON_VERSION} 
