--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,7 +1,10 @@
 {
     "name": "ICP Hello World Motoko",
-    "image": "ghcr.io/dfinity/icp-dev-env:3",
-    "forwardPorts": [4943, 8080],
+    "image": "ghcr.io/dfinity/icp-dev-env:4",
+    "forwardPorts": [
+        4943,
+        8080
+    ],
     "portsAttributes": {
         "4943": {
             "label": "dfx",
