--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,16 +1,18 @@
 tasks:
-  - before: |      
-      export PATH="$HOME/bin:$PATH"
+  - before: |
       export DFX_VERSION=0.17.0
       export POCKET_IC_PYTHON_VERSION=2.1.0
       export POCKET_IC_SERVER_VERSION=3.0.1
+      export DFXVM_INIT_YES=true
+      export PATH="$HOME/bin:$PATH"
       echo 'export PATH="$HOME/bin:$PATH"' >> ~/.bashrc
       sudo apt-get install -q -y libunwind-dev
       sh -ci "$(curl -fsSL https://internetcomputer.org/install.sh)"
+      source "$HOME/.local/share/dfx/env" 
       curl -Ls https://github.com/dfinity/pocketic/releases/download/${POCKET_IC_SERVER_VERSION}/pocket-ic-x86_64-linux.gz -o pocket-ic.gz
       gzip -d pocket-ic.gz
       chmod +x pocket-ic
-      pip3 install pocket-ic==${POCKET_IC_PYTHON_VERSION} 
+      pip3 install pocket-ic==${POCKET_IC_PYTHON_VERSION}
       npm install &
       dfx start --background --clean
       open README.md
