--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,8 +1,8 @@
 tasks:
   - before: |
       export DFX_VERSION=0.24.2
-      export POCKET_IC_PYTHON_VERSION=2.1.0
-      export POCKET_IC_SERVER_VERSION=3.0.1
+      export POCKET_IC_PYTHON_VERSION=3.0.0
+      export POCKET_IC_SERVER_VERSION=7.0.0
       export DFXVM_INIT_YES=true
       export PATH="$HOME/bin:$PATH"
       echo 'export PATH="$HOME/bin:$PATH"' >> ~/.bashrc
@@ -23,7 +23,7 @@ vscode:
     - ms-python.python
 
 ports:
-  - name: Replica
+  - name: Dfx
     port: 4943
     visibility: public
     onOpen: ignore
