--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "prebuild": "npm i && dfx generate backend",
+    "prebuild": "npm i --include=dev && dfx generate backend",
     "build": "vite build",
     "dev": "vite"
   },
